# mandelbrot

./: flake.nix  result
lib/Config/: Autostart.hs  Prompt.hs  XMobar.hs
nix/formatters/: default.nix
nix/overlay/: default.nix  xmonad.nix
nix/shell/: default.nix
src/xmobar/: config.nix  xmobar  xmobar-configured.cabal  xmobar.cabal  xmobar.hs
src/xmobar/icons/: bsp.xpm  full.xpm  mirrortiled.xpm  monocle.xpm  tabbed.xpm  threecol.xpm  tiled.xpm
src/xmobar/lib/Xmobar/: Config.hs
src/xmobar/scripts/: khal.sh  taskwarrior.sh
src/xmonad/: xmonad-configured.cabal  xmonad.cabal  xmonad.hs
src/xmonad/lib/Config/: Autostart.hs  Keybinds.hs  Layout.hs  ManageHook.hs  Scratchpads.hs  Search.hs  XMobar.hs
src/xmonad/lib/Utils/: Taskwarrior.hs
