name:          xmobar-configured
version:       1.0
synopsis:      My XMobar config
author:        Dysthesis <antheoraviel@protonmail.com>
maintainer:    Dysthesis <antheoraviel@protonmail.com>
category:      Graphics
build-type:    Simple
cabal-version: >= 1.10
    
executable xmobar-configured
  main-is: xmobar.hs
  ghc-options: -Werror -rtsopts -with-rtsopts=-V0 -threaded
  build-depends: base
    , xmobar
    , text
  default-language: Haskell2010
