name:          xmobar-configured
version:       1.0
synopsis:      My XMobar config
author:        Dysthesis <antheoraviel@protonmail.com>
maintainer:    Dysthesis <antheoraviel@protonmail.com>
category:      Graphics
build-type:    Simple
cabal-version: >= 1.10

library xmobar-lib
  exposed-modules:
    Xmobar.Config
  hs-source-dirs: lib
  ghc-options: -Wall -Werror -with-rtsopts=-V0 -threaded
  build-depends: base >= 4.7
    , xmobar
    , process
    , extra
  default-language: Haskell2010

executable xmobar-configured
  main-is: xmobar.hs
  ghc-options: -Wall -Werror -rtsopts -with-rtsopts=-V0 -threaded
  build-depends: base
    , xmobar
    , xmobar-lib
  default-language: Haskell2010
