name:          xmonad-configured
version:       1.0
synopsis:      My XMonad setup
license = "unknown";
author:        Dysthesis <antheoraviel@protonmail.com>
maintainer:    Dysthesis <antheoraviel@protonmail.com>
category:      Graphics
build-type:    Simple
cabal-version: >= 1.10

library
  exposed-modules:
	  Config.Autostart
	  Config.Keybinds
	  Config.Layout
	  Config.ManageHook
	  Config.Prompt
	  Config.Scratchpads
	  Config.Search
	  Config.XMobar
  hs-source-dirs: lib
  ghc-options: -Wall -Werror -rtsopts -with-rtsopts=-V0 -threaded
  build-depends: base
    , xmonad
    , xmonad-contrib
    , containers
    , X11
  default-language: Haskell2010

executable xmonad-configured
  main-is: xmonad.hs
  ghc-options: -Wall -Werror -rtsopts -with-rtsopts=-V0 -threaded
  build-depends: base
    , xmonad
    , xmonad-contrib
    , xmonad-configured
  default-language: Haskell2010
